[package]
name = "debra-common"
version = "0.1.0"
authors = ["Oliver Giersch"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/oliver-giersch/debra-common.git"
edition = "2018"

[features]
default = ["std"]

# must be disabled for use in no_std crates
std = ["arrayvec/std", "reclaim/std"]

[dependencies.arrayvec]
version = "0.4.10"
default-features = false

[dependencies.reclaim]
version = "0.1.0"
default-features = false