[package]
name = "debra-common"
description = "Common types, traits and base functionality for the DEBRA reclamation scheme."
version = "0.1.0"
authors = ["Oliver Giersch"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/oliver-giersch/debra-common.git"
documentation = "https://docs.rs/debra-common"
edition = "2018"
build = "build.rs"
exclude = [".travis.yml", "ci/*"]

[features]
default = ["std"]

# must be disabled for use in no_std crates
std = ["arrayvec/std", "reclaim/std"]

[dependencies.arrayvec]
version = "0.4.10"
default-features = false

[dependencies.reclaim]
version = "0.2.0"
default-features = false
